# KeybordMouse

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
installscript/: setupscript.iss
src/: CMakeLists.txt  app.manifest  appicon.rc  main.cpp  resource.qrc
src/dialogs/: dragmovedialog.cpp  dragmovedialog.h  fullscreenareawindow.cpp  fullscreenareawindow.h  settingwindow.cpp  settingwindow.h  settingwindow.ui  usermessagebox.cpp  usermessagebox.h  usermessagebox.ui
src/dialogs/models/: logmodel.cpp  logmodel.h
src/dialogs/pages/: commonsettingpage.cpp  commonsettingpage.h  loginfopage.cpp  loginfopage.h  screenselectionmodesetpage.cpp  screenselectionmodesetpage.h  shortcutsettingpage.cpp  shortcutsettingpage.h
src/dialogs/widgets/: hotkeysetwidgetbase.cpp  hotkeysetwidgetbase.h  hotkeysetwidgetbase.ui
src/helpers/: clickthroughwindow.cpp  clickthroughwindow.h  config.cpp  config.h  debug.cpp  debug.h  extensionmethods.h  globalkeyhook.cpp  globalkeyhook.h  globalsignal.cpp  globalsignal.h  keypresshandler.cpp  keypresshandler.h  messages.h  mouseeventhelper.h  optionnalchain.h
src/trayicons/: systemtrayicon.cpp  systemtrayicon.h  traypos.cpp  traypos.h
